--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "project",
     "management"
   ],
-  "license": "MIT",
+  "license": "Copyright. All rights reserved.",
   "repository": {
     "type": "git",
     "url": "git://github.com/feathers-x/project-control.git"
