--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "project-control",
-  "description": "Things to help control projects.",
+  "name": "@feathers-x/project-control",
+  "description": "Audit projects.",
   "version": "0.0.0",
   "homepage": "https://github.com/feathers-x/project-control",
   "main": "lib/",
@@ -26,10 +26,10 @@
   },
   "scripts": {
     "publish": "git push origin --tags && npm run changelog && git push origin",
-    "release:pre": "npm version prerelease && npm publish --tag pre",
-    "release:patch": "npm version patch && npm publish",
-    "release:minor": "npm version minor && npm publish",
-    "release:major": "npm version major && npm publish",
+    "release:pre": "npm version prerelease && npm publish --access restricted --tag pre",
+    "release:patch": "npm version patch && npm publish --access restricted",
+    "release:minor": "npm version minor && npm publish --access restricted",
+    "release:major": "npm version major && npm publish --access restricted",
     "changelog": "github_changelog_generator && git add CHANGELOG.md && git commit -am \"Updating changelog\"",
     "lint": "semistandard lib/*.js lib/**/*.js test/*.js test/**/*.js --fix",
     "mocha": "mocha --opts mocha.opts",
