--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "lib": "lib"
   },
   "dependencies": {
-    "acorn": "5.1.2"
+    "acorn": "5.1.2",
+    "glob": "7.1.2"
   },
   "devDependencies": {
     "chai": "3.5.0",
