--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@feathers-x/cli-audit",
+  "name": "@feathers-plus/cli-audit",
   "description": "Audit projects.",
   "version": "0.0.10",
   "homepage": "https://feathers-plus.github.io",
@@ -11,7 +11,7 @@
   "license": "Copyright. All rights reserved.",
   "repository": {
     "type": "git",
-    "url": "git://github.com/feathers-x/cli-audit.git"
+    "url": "git://github.com/feathers-plus/cli-audit.git"
   },
   "author": {
     "name": "John J. Szwaronek",
